@@ -16,3 +16,11 @@ Discussions aren't working under Plone 2.0.x
 You are getting a AttributeError: talkback. Replace the discussion_reply script
 with http://svn.plone.org/plone/CMFPlone/branches/2.1/skins/plone_form_scripts/discussion_reply.cpy
 This issue is fixed in CMFPlone 2.1
+
+Template views for folders aren't working under Plone 2.0.x
+-----------------------------------------------------------
+
+Features like the photo album view for folders doesn't work under Plone 2.0.x
+because the browserDefault method of plone utilities doesn't know how to handle
+folders with template mixin.
+This issue is fixed in CMFPlone 2.1
