@@ -1,0 +1,26 @@
+<tal:header tal:replace="structure here/manage_page_header|nothing">Header</tal:header>
+<tal:message tal:define="manage_tabs_message options/manage_tabs_message | request/manage_tabs_message | nothing"
+    tal:replace="structure here/manage_tabs">Tabs</tal:message>
+<tal:body tal:define="submitted request/submitted  | nothing;
+    ">
+
+ <tal:form tal:condition="not: submitted">
+
+  <h3>Recreate image scales. </h3>
+
+  <p>TODO explain me</p>
+ 
+  <form method="put" action="" tal:attributes="action template/getId">
+    <input type="hidden" name="submitted" value="1" />
+    <input type="submit" name="submit" value="recreate" />
+  </form>
+
+ </tal:form>
+ <tal:recreating tal:condition="submitted">
+   <h3>Recreating image scales. </h3>
+
+   <pre tal:content="here/recreateImageScales"/>
+ </tal:recreating>
+
+</tal:body>
+<tal:footer tal:replace="structure here/manage_page_footer|nothing">footer</tal:footer>
