@@ -1,5 +1,10 @@
 1.0-devel
-======================
+=====================
+
+ * Added some tabs to the ZMI view of the portal_atct tool: Overview, rescale
+   migrate and recatalog. The usage of the external methods is deprecated in
+   favor of the tool.
+   [tiran]
 
  * Restored Plone 2.0.x compatibility.
    [dtremea]
